[tool.poetry]
name = "cs-final-card"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
tqdm = "^4.56.0"
colorama = "^0.4.4"
prettytable = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
